<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/searchdefault"
        android:iconTint="#9F9F9F"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/favarite"
        android:iconTint="#9F9F9F"
        android:title="@string/favorite" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/email"
        android:iconTint="#9F9F9F"
        android:title="@string/send_email" />

    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/message"
        android:title="@string/message"
        android:iconTint="#9F9F9F"
        android:visible="true" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        android:iconTint="#9F9F9F"
        android:visible="true" />

</menu>