<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shu.searchwork.ui.home.HomeFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.shu.searchwork.ui.dashboard.DashboardFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.shu.searchwork.ui.notifications.NotificationsFragment"
        android:label="@string/send_email"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/messageFragment"
        android:name="com.shu.searchwork.ui.message.MessageFragment"
        android:label="@string/message"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.shu.searchwork.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>